<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">
    <item
        android:id="@+id/action_stats"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_stats" />
    <item
        android:id="@+id/action_learn"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_learn" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_share" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/action_add" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/action_logout" />
</menu>
